# grr

./: DNSOps.hs  QFS.hs  dnsloops.cabal  monitor-dns.cabal  monitor-dns.hs  playb1.hs  test.hs
