Name: dnsloops
Version: 0.3
Description: DNS lookup with feedback of newly found results
License: AllRightsReserved
Author: Ben Clifford <benc@cqx.ltd.uk>
Build-Type: Simple
Cabal-Version: >=1.6

Executable dnsloops
  Build-depends: base, dns, bytestring, nagios-haskell, mtl
  main-is: monitor-dns.hs

Executable test-dnsloops
  Build-depends: base, dns, bytestring, nagios-haskell, mtl
  main-is: test.hs

